--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ a:visited {
 
 html {
 overflow-y:scroll;
+background-color:white;
 }
 
 .logo{
@@ -29,12 +30,24 @@ overflow-y:scroll;
   margin-bottom:2em;
 }
 
+body{
+  width:1030px;
+  background-color:white;
+  margin-right:auto;
+  margin-left:auto;
+}
 
 /**************************************\
  *トップページ
 \**************************************/
 
-div.logo img:hover{
+
+.siteimg{
+  margin-top:32px;
+  text-align: center;
+}
+
+div.siteimg img:hover{
   Opacity: 0.8;
   border: 1px #AAAAAA solid;
 }
@@ -58,6 +71,7 @@ table.top{
   line-height:300%;
   padding: 0;
 }
+
 
 .information{
   width:640px;
