--- a/style.css
+++ b/style.css
@@ -3,38 +3,43 @@
 \**************************************/
 
 a:link{
-  color:#ff0000;
-  text-decoration: none;
+    color:#ff0000;
+    text-decoration: none;
 }
 
 a:visited {
-  color:#ff0000;
-  text-decoration: none;
+    color:#ff0000;
+    text-decoration: none;
+}
+
+a:hover {
+    color:#ff9999;
+    text-decoration: none;
 }
 
 html {
-overflow-y:scroll;
-background-color:white;
+    overflow-y:scroll;
+    background-color:white;
 }
 
 .logo{
-  margin-top:32px;
-  text-align: center;
+    margin-top:32px;
+    text-align: center;
 }
 
 .back{
-  font-size:large
-  line-height:200%;
-  text-align:center;
-  margin-top:4em;
-  margin-bottom:2em;
+    font-size:large
+    line-height:200%;
+    text-align:center;
+    margin-top:4em;
+    margin-bottom:2em;
 }
 
 body{
-  width:1030px;
-  background-color:white;
-  margin-right:auto;
-  margin-left:auto;
+    width:1030px;
+    background-color:white;
+    margin-right:auto;
+    margin-left:auto;
 }
 
 /**************************************\
@@ -43,51 +48,49 @@ body{
 
 
 div.flexslider{
-  margin-top:3em;
-  text-align: center;
+    margin-top:3em;
+    text-align: center;
 }
 
 div.flexslider img:hover{
-  Opacity: 0.8;
-  border: 1px #AAAAAA solid;
+    Opacity: 0.8;
+    border: 1px #AAAAAA solid;
 }
 
 img.topbanner{
-border-style:solid;
-border-width:1px;
-border-color:#999999;
-
+    border-style:solid;
+    border-width:1px;
+    border-color:#999999;
 }
 
 ul.top{
-  width:1024px;
-  margin-top:1em;
-  right:50px;
-  position:relative;
+    width:1024px;
+    margin-top:1em;
+    right:50px;
+    position:relative;
 
 }
 
 li.top{
-  float:left;
-  list-style-type:none;
-  font-size:large;
-  line-height:300%;
-  width:256px;
-  text-align:center;
+    float:left;
+    list-style-type:none;
+    font-size:large;
+    line-height:300%;
+    width:256px;
+    text-align:center;
 }
 
 
 .information{
-  width:640px;
-  margin-top:3em;
-  margin-left:auto;
-  margin-right:auto;
-  text-align:center;
-  font-size:midium;
-  line-height:175%;
-  padding: 1em;
-  border: 1px #000000 solid;
-  visibility:true;
+    width:640px;
+    margin-top:3em;
+    margin-left:auto;
+    margin-right:auto;
+    text-align:center;
+    font-size:midium;
+    line-height:175%;
+    padding: 1em;
+    border: 1px #000000 solid;
 }
 
 
@@ -97,75 +100,75 @@ li.top{
 \**************************************/
 
 img.novelbanner{
-  border-style:solid;
-  border-width:1px;
-  border-color:#999999;
+    border-style:solid;
+    border-width:1px;
+    border-color:#999999;
 }
 
 table.novel{
-  table-layout:auto;
-  width:800px;
-  margin-top:5em;
-  margin-bottom:0em;
-  margin-left:auto;
-  margin-right:auto;
-  border: solid 1px #dddddd;
-  border-spacing:0px;
+    table-layout:auto;
+    width:800px;
+    margin-top:5em;
+    margin-bottom:0em;
+    margin-left:auto;
+    margin-right:auto;
+    border: solid 1px #dddddd;
+    border-spacing:0px;
 }
 
 table.novel td{
-  border-bottom: solid 1px #dddddd;
-  border-top: solid 1px #dddddd;
-  border-right: solid 1px #dddddd;
-  border-left: solid 1px #dddddd;
+    border-bottom: solid 1px #dddddd;
+    border-top: solid 1px #dddddd;
+    border-right: solid 1px #dddddd;
+    border-left: solid 1px #dddddd;
 }
 
 .noveltitle td{
-  text-align:center;
-  height:100px;
-  font-size:xx-large;
-  }
+    text-align:center;
+    height:100px;
+    font-size:xx-large;
+}
   
 .noveldata1{
-  text-align:center;
-  font-size:medium;
-  line-height:100%;
-  height:2em;
-  }
+    text-align:center;
+    font-size:medium;
+    line-height:100%;
+    height:2em;
+}
  
 .noveldata2{
-  text-align:center;
-  font-size:medium;
-  line-height:125%;
-  height:2em;
-  }
+    text-align:center;
+    font-size:medium;
+    line-height:125%;
+    height:2em;
+}
 
 .novelabst{
-  padding-left:2em;
-  padding-right:2em;
-  padding-top:2em;
-  padding-bottom:2em;
-  text-align:justify;
-　 font-size:large;
-　 line-height:100%;
+    padding-left:2em;
+    padding-right:2em;
+    padding-top:2em;
+    padding-bottom:2em;
+    text-align:justify;
+    font-size:large;
+    line-height:100%;
 }
 
 table.short{
-  table-layout:auto;
-  width:800px;
-  margin-top:0.5em;
-  margin-left:auto;
-  margin-right:auto;
-  border: solid 1px #cccccc
+    table-layout:auto;
+    width:800px;
+    margin-top:0.5em;
+    margin-left:auto;
+    margin-right:auto;
+    border: solid 1px #cccccc
 }
 
 table.short td{
-  border: solid 0px #cccccc
+    border: solid 0px #cccccc
 
 }
 
 .margin_novel_01{
-  margin-top:5em;
+    margin-top:5em;
 }
 
 
@@ -175,66 +178,66 @@ table.short td{
 \**************************************/
 
 img.picturebanner{
-  border-style:solid;
-  border-width:1px;
-  border-color:#999999;
+    border-style:solid;
+    border-width:1px;
+    border-color:#999999;
 }
 
 .picture_text{
-  width:1024px;
-  text-align:center;
-  margin-top:3em;
+    width:1024px;
+    text-align:center;
+    margin-top:3em;
 }
 
 p.picturecaption{
-  position:relative;
-  top:1em;
-  font-size:large;
+    position:relative;
+    top:1em;
+    font-size:large;
 }
 
 li.picture{
-  float:left;
-  margin:3px;
-  list-style-type:none;
+    float:left;
+    margin:3px;
+    list-style-type:none;
 }
 
 ul.picture{
-  margin-top:3em;
+    margin-top:3em;
 }
 
 li.picture img{
-  border: 1px #000000 solid;
-  Opacity: 1;
+    border: 1px #000000 solid;
+    Opacity: 1;
 }
 
 li.picture img:hover{
-  Opacity: 0.6;
-  border: 1px #AAAAAA solid;
+    Opacity: 0.6;
+    border: 1px #AAAAAA solid;
 }
 
 
 
 .image{
-  margin-top:3em;
-  text-align:center;
+    margin-top:3em;
+    text-align:center;
 }
 
 .image img{
-  border: 1px #000000 solid;
+    border: 1px #000000 solid;
 }
 
 .picturetitle{
-  margin-top:1em;
-  font-size:large;
-  line-height:100%;
-  text-align:center;
+    margin-top:1em;
+    font-size:large;
+    line-height:100%;
+    text-align:center;
 }
 
 .caption{
-  margin-top:1em;
-  font-size:medium;
-  line-height:100%;
-  text-align:center;
+    margin-top:1em;
+    font-size:medium;
+    line-height:100%;
+    text-align:center;
 }
 
 
@@ -243,38 +246,38 @@ li.picture img:hover{
 \**************************************/
 
 img.musicbanner{
-  border-style:solid;
-  border-width:1px;
-  border-color:#999999;
+    border-style:solid;
+    border-width:1px;
+    border-color:#999999;
 }
 
 div.music_text{
-  text-align:center;
-  margin-top:3em;}
+    text-align:center;
+    margin-top:3em;}
 
 table.music{
-  margin-right:auto;
-  margin-left:auto;
-  width:640px;
-  table-layout:auto;
-  padding-top:1em;
+    margin-right:auto;
+    margin-left:auto;
+    width:640px;
+    table-layout:auto;
+    padding-top:1em;
 }
 
 tr.music_column{
-  text-align:left;
-  font-size:large;
-  text-decoration:underline;
-  height:3em;
+    text-align:left;
+    font-size:large;
+    text-decoration:underline;
+    height:3em;
 }
 
 tr.music_list{
-  text-align:left;
-  height:3em;
-  font-size:smaller;
+    text-align:left;
+    height:3em;
+    font-size:smaller;
 }
 
 td.music_title{
-  font-size:large;
+    font-size:large;
 }
 
 /**************************************\
@@ -282,39 +285,39 @@ td.music_title{
 \**************************************/
 
 img.eventbanner{
-  border-style:solid;
-  border-width:1px;
-  border-color:#999999;
+    border-style:solid;
+    border-width:1px;
+    border-color:#999999;
 }
 
 div.event_text{
-  text-align:center;
-  margin-top:3em;
-  margin-bottom:2em;}
+    text-align:center;
+    margin-top:3em;
+    margin-bottom:2em;}
 
 table.event{
-  table-layout:auto;
-  width:auto;
-  margin-top:0em;
-  margin-bottom:5em;
-  margin-left:auto;
-  margin-right:auto;
-  border-spacing:0px;
+    table-layout:auto;
+    width:auto;
+    margin-top:0em;
+    margin-bottom:5em;
+    margin-left:auto;
+    margin-right:auto;
+    border-spacing:0px;
 }
  
 td.eventdate{
-  width:130px;
-  vertical-align:top;
-  }
+    width:130px;
+    vertical-align:top;
+}
   
 td.event{
-  vertical-align:top;
-  padding-bottom:1em;
-  }
+    vertical-align:top;
+    padding-bottom:1em;
+}
   
 span.event{
-  font-weight:bold;
-  font-size:large;
+    font-weight:bold;
+    font-size:large;
 }
 
 /**************************************\
@@ -322,65 +325,65 @@ span.event{
 \**************************************/
 
 img.linkbanner{
-  border-style:solid;
-  border-width:1px;
-  border-color:#999999;
+    border-style:solid;
+    border-width:1px;
+    border-color:#999999;
 }
 
 div.link_category{
-  width:800px;
-  margin:auto;
-  border-bottom:double #999999;
-  margin-top:3em;
-  font-size:large;
-  padding-left:0.5em;
+    width:800px;
+    margin:auto;
+    border-bottom:double #999999;
+    margin-top:3em;
+    font-size:large;
+    padding-left:0.5em;
 }
 
 
 table.link{
-  table-layout:fixed;
-  width:800px;
-  margin-top:1em;
-  margin-left:auto;
-  margin-right:auto;
+    table-layout:fixed;
+    width:800px;
+    margin-top:1em;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 table.link td{
-  text-align:center;
-  padding-top:0.5em;
-  padding-bottom:0.5em;
-  width:auto;
-  height:70px;
+    text-align:center;
+    padding-top:0.5em;
+    padding-bottom:0.5em;
+    width:auto;
+    height:70px;
 }
 
 table.link img{
-  border: 1px #000000 solid;
-  opacity:1;
+    border: 1px #000000 solid;
+    opacity:1;
 }
 
 table.link img:hover{
-  border: 1px #AAAAAA solid;
-  opacity:0.6;
+    border: 1px #AAAAAA solid;
+    opacity:0.6;
 }
 
 .pbanner{
-  border: 1px #000000 solid;
-  padding-top:0.5em;
-  padding-bottom:0.5em;
-  padding-right:1em;
-  padding-left:1em;
-  text-align:center;
-  color: #000000;
-  opacity:1;
+    border: 1px #000000 solid;
+    padding-top:0.5em;
+    padding-bottom:0.5em;
+    padding-right:1em;
+    padding-left:1em;
+    text-align:center;
+    color: #000000;
+    opacity:1;
 }
 
 .pbanner:hover{
-  border: 1px #AAAAAA solid;
-  padding-top:0.5em;
-  padding-bottom:0.5em;
-  padding-right:1em;
-  padding-left:1em;
-  text-align:center;
-  opacity:0.6;
+    border: 1px #AAAAAA solid;
+    padding-top:0.5em;
+    padding-bottom:0.5em;
+    padding-right:1em;
+    padding-left:1em;
+    text-align:center;
+    opacity:0.6;
 }
 
