イベントページのレイアウトを変更

--- a/style.css
+++ b/style.css
@@ -317,7 +317,29 @@ td.event{
   
 span.event{
     font-weight:bold;
-    font-size:large;
+    font-size:140%;
+}
+
+p.eventcaption{
+    margin-top: 0.5em;
+    margin-bottom: 0em;
+
+}
+
+p.itemlisttitle{
+    margin-top: 0.5em;
+    margin-bottom: 0em;
+}
+
+ul.itemlist{
+    margin: 0em;
+    list-style-type: circle;
+}
+
+span.newitem{
+    color: blue;
+    font-weight: bold;
+    margin-left: 1.5em;
 }
 
 /**************************************\
