--- a/fonts/serif.css
+++ b/fonts/serif.css
@@ -1,2 +1,2 @@
-div.contents div.text {font-family:"ヒラギノ明朝 Pro W3","ＭＳ 明朝",serif;}
-span.simplified {font-family:"STSong","SimSun",serif;}
+div.contents div.text {font-family:serif, "ヒラギノ明朝 Pro W3","ＭＳ 明朝",serif;}
+span.simplified {font-family:serif, "STSong","SimSun",serif;}
