--- a/fonts/sans-serif.css
+++ b/fonts/sans-serif.css
@@ -1,2 +1,2 @@
-div.contents div.text {font-family:"ヒラギノ角ゴ Pro W3","ＭＳ ゴシック",sans-serif;}
-span.simplified {font-family:"STHeiti Regular","SimHei",sans-serif;}
+div.contents div.text {font-family:sans-serif;}
+span.simplified {font-family:sans-serif;}
