--- a/fonts/meiryo.css
+++ b/fonts/meiryo.css
@@ -1,15 +1,5 @@
-@font-face {
-  font-family: "メイリオ";
-  src: url("../fonts/meiryo.ttc") format("truetype") ;
-}
-
-@font-face {
-  font-family: "Microsoft YaHei";
-  src: url("../fonts/msyh.ttf") format("truetype") ;
-}
-
 div.contents div.text {
-  font-family:"メイリオ";
+  font-family:"メイリオ", "Meiryo";
 }
 
 span.simplified {
