フォント周り変更

--- a/fonts/yu_mincho.css
+++ b/fonts/yu_mincho.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "游明朝","游明朝体","Yu Mincho","YuMincho";
+  font-family: "游明朝";
   src: url("../fonts/yumin.ttf") format("truetype") ;
 }
 
