フォント周り変更

--- a/metastable3/desktop.css
+++ b/metastable3/desktop.css
@@ -205,14 +205,15 @@ div.footer div.metastable-index div.metastable-section-index > ol li:hover {
 \**************************************/
 div.contents {
   color: #666;
-  width: 37em;
+  width: 40em;
   margin: 5em auto 5em;
   padding: 0;
 }
 
 div.contents div.text {
-  line-height: 2.23;
-  font-weight:light;
+  line-height: 2;
+  font-weight:;
+  font-size:17.5px;
   text-align:justify;
 }
 
