--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -208,7 +208,7 @@ div.contents {
 
 div.contents div.text {
   line-height: 2;
-  font-weight:normal;
+  font-weight:;
   font-size:17.5px;
   text-align:justify;
 }
