--- a/fonts/yu_mincho.css
+++ b/fonts/yu_mincho.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "游明朝";
-  src: url("../fonts/yumin.ttf") format("truetype") ;
+  font-family: "IPAex明朝";
+  src: url("../fonts/ipaexm.ttf") format("truetype") ;
 }
 
 @font-face {
@@ -9,7 +9,7 @@
 }
 
 div.contents div.text {
-  font-family:"游明朝","游明朝体","Yu Mincho","YuMincho";
+  font-family:"游明朝","游明朝体","Yu Mincho","YuMincho","IPAex明朝";
   color:black;
 }
 
