--- a/hardproblem/portrait.css
+++ b/hardproblem/portrait.css
@@ -52,7 +52,7 @@ div.header .hr {
  * Contents of Main contents
 \**************************************/
 #main-contents img.hpft-cover {
-  display: none; /* FIXME */
+  display: ; /* FIXME */
 }
 
 /**************************************\
