--- a/fonts/msmincho.css
+++ b/fonts/msmincho.css
@@ -1,2 +1,9 @@
-div.contents div.text {font-family:"ＭＳ 明朝", "MS Mincho", "MS 明朝", serif;}
-span.simplified {font-family:"SimSun",serif;}
+div.contents div.text {
+    font-family:"ＭＳ 明朝", "MS Mincho", "MS 明朝", serif;
+    color:#555;
+}
+
+span.simplified {
+    font-family:"SimSun",serif;
+    color:#555;
+}
