--- a/fonts/sans-serif.css
+++ b/fonts/sans-serif.css
@@ -1,2 +1,9 @@
-div.contents div.text {font-family:sans-serif;}
-span.simplified {font-family:sans-serif;}
+div.contents div.text {
+    font-family:sans-serif;
+    color:#555;
+}
+
+span.simplified {
+    font-family:sans-serif;
+    color:#555;
+}
