--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -56,8 +56,8 @@ div.header {
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family:"游明朝","HG明朝B",serif;
-  font-weight:bold;
+  font-family:"游明朝","游明朝体","Yu Mincho","YuMincho","ヒラギノ明朝 ProN W3","Hiragino Mincho ProN","HG明朝E",serif;
+  background-color: #f8f8f8;
 }
 
 div.header .hr {
@@ -78,10 +78,14 @@ div.header p.word {
 }
 
 div.hpft-page-header img {
-  opacity:0.5;
-    
+  opacity:0.7;
 }
 
+div.hpft-page-header {
+  top:-5px;
+}
+
+    
 /**************************************\
  * Section Index of Header
 \**************************************/
@@ -107,13 +111,13 @@ div.header div.hpft-section-index ol li {
 }
 
 div.header div.hpft-section-index p.title {
-  color: #aaa;
+  color: #000;
   display: inline-block;
   margin-right:1em;
 }
 
 div.header div.hpft-section-index ol li a {
-  color: #aaa;
+  color: #000;
   text-decoration: none;
 }
 
@@ -144,7 +148,7 @@ div.header select.fontselect {
 div.footer {
   margin: 5em 0 0;
   padding: 0;
-  font-family:"游明朝 Demibold","ヒラギノ明朝 ProN W3","Hiragino Mincho Pro","HG明朝B",serif;
+  font-family:"游明朝","游明朝体","Yu Mincho","YuMincho","ヒラギノ明朝 ProN W3","Hiragino Mincho ProN","HG明朝E",serif;
 }
 
 div.footer div.hr {
@@ -172,7 +176,7 @@ div.footer div.hpft-index div.hpft-section-index > ol {
 }
 
 div.footer div.hpft-index div.hpft-section-index > p.title {
-  color: #aaa;
+  color: #000;
   width: 16em;
   display: inline-block;
 }
@@ -186,7 +190,7 @@ div.footer div.hpft-index div.hpft-section-index > ol li {
 }
 
 div.footer div.hpft-index div.hpft-section-index > ol li a {
-  color: #aaa;
+  color: #000;
   text-decoration: none;
 }
 
@@ -281,7 +285,7 @@ body.index {
   margin-bottom: -1em;
   width:33em;
   position:relative;left:-0.5em;
-  font-family:"游明朝 Demibold","ヒラギノ明朝 ProN W3","Hiragino Mincho Pro","HG明朝B",serif;
+  font-family:"游明朝","游明朝体","Yu Mincho","YuMincho","ヒラギノ明朝 ProN W3","Hiragino Mincho ProN","HG明朝E",serif;
 }
 
 #main-hpft-index > ol {
@@ -307,7 +311,7 @@ body.index {
 
 #main-hpft-index > ol li p.title {
   width: 14em;
-  color: #555;
+  color: #000;
   font-weight: bold;
   display: inline-block;
 }
@@ -330,7 +334,7 @@ body.index {
 }
 
 #main-hpft-index > ol li ol li a {
-  color: #aaa;
+  color: #000;
   text-decoration: none;
 }
 
