--- a/style.css
+++ b/style.css
@@ -152,7 +152,9 @@ table.novel td{
     padding-bottom:2em;
     text-align:justify;
     font-size:large;
-    line-height:100%;
+    line-height:175%;
+    font-family:"游明朝","游明朝体","Yu Mincho","YuMincho","ヒラギノ明朝 ProN W3","Hiragino Mincho ProN","HG明朝E",serif;
+    color:black;
 }
 
 table.short{
