--- a/fonts/yu_mincho.css
+++ b/fonts/yu_mincho.css
@@ -4,7 +4,7 @@
 }
 
 div.contents div.text {
-  font-family:"游明朝","游明朝体","Yu Mincho","YuMincho","IPAex明朝";
+  font-family:"游明朝","游明朝体","Yu Mincho","YuMincho";
   color:#000;
 }
 
