ハドプレサイトリニューアルテスト版（作成途中）

--- a/hardproblem/desktop.css
+++ b/hardproblem/desktop.css
@@ -284,6 +284,7 @@ body.index {
   margin-top: 1em;
   margin-bottom: -1em;
   width:33em;
+  height:640px;
   position:relative;left:-0.5em;
   font-family:"游明朝","游明朝体","Yu Mincho","YuMincho","ヒラギノ明朝 ProN W3","Hiragino Mincho ProN","HG明朝E",serif;
 }
