--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ table.novel td{
     padding-top:2em;
     padding-bottom:2em;
     text-align:justify;
-    font-size:large;
+    font-size:16px;
     line-height:175%;
     font-family:"游明朝","游明朝体","Yu Mincho","YuMincho","ヒラギノ明朝 ProN W3","Hiragino Mincho ProN","HG明朝E",serif;
     color:black;
