--- a/hardproblem_test/style.css
+++ b/hardproblem_test/style.css
@@ -78,8 +78,8 @@ a:hover{
 #Logo{
     width:317;
     position:absolute;
-    bottom:5px;
-    left:30px;
+    bottom:0px;
+    left:10px;
 }
 
 #Logo:hover{
@@ -87,16 +87,16 @@ a:hover{
 }
 
 #menu{
-    width:650px;
     position: absolute;
     bottom:20px;
-    right:30px;
+    right:15px;
     text-align:center;
 }
 
 img.Button{
     height:60px;
-    margin: 7px;
+    margin: 10px;
+    margin-bottom: 5px;
     opacity:0.95;
 }
 
