--- a/hardproblem_test/style.css
+++ b/hardproblem_test/style.css
@@ -11,7 +11,7 @@ body{
 #Background{
     width: 100%;
     height: 100%;
-	position: absolute;
+	position: fixed;
     top: 0;
     left: 0;
     overflow: hidden;
@@ -123,10 +123,6 @@ img.Button:hover{
     background-image: url(images/mask.png);
 }
 
-#Index a:hover{
-    border-bottom: solid 2px #fff;
-}
-
 #indexBackground{
     z-index: 1;
     position: absolute;
@@ -144,7 +140,12 @@ img.Button:hover{
     text-shadow: 0px 0px 5px #fff;
 }
 
-#Index1{
+span.SecSpan{
+    padding-right: 5px;
+    padding-left: 5px;    
+}
+span.SecSpan:hover{
+    border: solid 1px #fff;
 }
 
 #Index2{
@@ -161,15 +162,26 @@ img.Button:hover{
 
 #Subsection{
     text-align: left;
-    font-size:80%;
+    font-size:90%;
     line-height: 50px;
-    letter-spacing: 0.3em;
+}
+
+span.SubsecSpan{
+    margin-right: 5px;
+    margin-left: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+span.SubsecSpan:hover{
+    border: solid 1px #fff;
+    margin-right: 4px;
+    margin-left: 4px;
 }
 
 #Index3{    
 
 }
-
 
 
 
@@ -359,18 +371,33 @@ div#InitializeSetting:hover{
     本文ページ
 ************************************/
 
-div.TextBackground{
+div#TextBackground{
     width: 1024px;
     background-color: #fff;
     margin: 0 auto;
     text-align: center;
     position: relative;
+    display: none;
 }
 
-img#SectionCover{
+
+div#SectionCover{
     width:784px;
     border: solid 1px #888;
-    display: inline;
+    display: block;
+    margin: 0 auto;
+    position: inherit;
+}
+
+img#SecCoverImg{
+     width:784px;
+}
+
+img#SecCoverLogo{
+    width:200px;
+    position: absolute;
+    bottom:0px;
+    opacity: 0.7;
 }
 
 span.Font{
