--- a/hardproblem/style.css
+++ b/hardproblem/style.css
@@ -5,7 +5,6 @@
 
 body{
     background-color: black;
-    font-family: "游明朝", "YuMincho", "HG明朝E", "IPAex明朝", serif;
 }
 
 #Background{
@@ -49,6 +48,7 @@ a:hover{
 
 
 #Cover{
+    font-family: "游明朝", "YuMincho", "HG明朝B", "IPAex明朝", serif;
     width:1024px;
     height:633px;
     margin:auto;
@@ -139,6 +139,7 @@ img.Button:hover{
     line-height: 2;
     z-index: 500;
     text-shadow: 0px 0px 5px #fff;
+    font-family: "游明朝 Demibold", "YuMincho Demibold", "HG明朝E", "IPAex明朝", serif;
 }
 
 span.SecSpan{
@@ -202,7 +203,7 @@ span.SubsecSpan:hover{
 div#CharsBody{
 	margin: auto; 
     margin-top:80px;
-    font-family: "游明朝", "YuMincho", "HG明朝E", "IPAex明朝", serif;
+    font-family: "游明朝", "YuMincho", "HG明朝B", "IPAex明朝", serif;
 }
 
 div.CharCard{
@@ -234,7 +235,8 @@ div.CharName{
     margin-bottom: 0px;
     position: relative;
     left:-5px;
-    font-family: "游明朝", "YuMincho", "HG明朝M", "IPAex明朝", serif;
+    font-weight: bold;
+    font-family: "游明朝 Demibold", "YuMincho Demibold", "HG明朝E", "IPAex明朝", serif;
 }
 
 div#CharTextRiko{
@@ -279,7 +281,7 @@ div.Article{
 div.ArticleTitle{
     font-size:120%;
     font-weight: bold;
-    font-family: "游明朝", "YuMincho", "HG明朝E", "IPAex明朝", serif;
+    font-family: "游明朝 Demibold", "YuMincho", "HG明朝E", "IPAex明朝", serif;
     border-bottom: solid 1px #fff;
 }
 
@@ -328,8 +330,9 @@ div.FontChoice:hover{
     text-decoration: underline;
 }
 
-span#ChoiceLight{
-    margin-right: 50px;
+span#ChoiceDark{
+    position: absolute;
+    left:150px;
 }
 
 span.ColorChoice:hover{
@@ -371,6 +374,58 @@ div#InitializeSettings:hover{
     text-decoration: underline;
 }
 
+div#Confirm{
+    width:1024px;
+    height: 633px;
+    position: absolute;
+    top: 0px;
+    text-shadow: 0px 0px 5px #fff;
+    background-image: url(images/mask.png);
+    background-position: center;
+    display: none;
+}
+
+div#ConfirmBackground{
+    position: absolute;
+    width: 1024px;
+    height: 262px;
+    top: 0px;
+    bottom: 0;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-bottom: solid 3px #fff;
+    border-top: solid 3px #fff;
+}
+
+div.ConfirmText{
+    position: absolute;
+    width: 1024px;
+    color: #fff;
+    font-family:"Noto Sans CJK JP", "源ノ角ゴシック","游ゴシック","游ゴシック体", "メイリオ", "HGPｺﾞｼｯｸM", sans-serif;
+    font-size:36px;
+    text-align: center;
+    top:250px;
+}
+
+div.YesNo{
+    position: absolute;
+    color: #fff;
+    width:1024px;
+    font-family: "Times New Roman", "Times", "Cambria", "Noto Serif", serif;
+    font-size:40px;
+    font-weight: ;
+    text-align: center;
+    bottom: 250px;
+}
+
+span.YesNo{
+    margin: 40px;
+}
+
+span.YesNo:hover{
+    margin: 40px;
+    opacity: 0.5;
+}
 
 /************************************
     リンクページ
