--- a/hardproblem/style.css
+++ b/hardproblem/style.css
@@ -28,17 +28,13 @@ body{
 }
 
 a:link{
-    color:white;
+    color: inherit;
     text-decoration: none;
 }
 
 a:visited{
-    color: white;
+    color: inherit;
     text-decoration: none;
-}
-
-a:hover{
-    color:white;
 }
 
 
@@ -65,11 +61,21 @@ a:hover{
     display: none;
 }
 
+#Cover a:link{
+    color:white;
+    text-decoration: none;
+}
+
+#Cover a:visited{
+    color: white;
+    text-decoration: none;
+}
+
 #Logo{
     width:317;
     position:absolute;
     bottom:0px;
-    left:10px;
+    left:30px;
 }
 
 #Logo:hover{
@@ -79,13 +85,13 @@ a:hover{
 #menu{
     position: absolute;
     bottom:20px;
-    right:25px;
+    right:40px;
     text-align:center;
 }
 
 img.Button{
     height:60px;
-    margin-left: 30px;
+    margin-left: 25px;
     margin-bottom: 5px;
     opacity:0.95;
 }
@@ -106,7 +112,7 @@ img.Button:hover{
 }
 
 #CloseButton:hover{
-    opacity:0.7;
+    opacity:0.5;
 }
 
 
@@ -326,8 +332,7 @@ div.SettingTitle{
 }
 
 div.FontChoice:hover{
-    opacity:0.7;
-    text-decoration: underline;
+    opacity:0.5;
 }
 
 span#ChoiceDark{
@@ -336,8 +341,7 @@ span#ChoiceDark{
 }
 
 span.ColorChoice:hover{
-    opacity:0.7;
-    text-decoration: underline;
+    opacity:0.5;
 }
 
 
@@ -359,8 +363,7 @@ div#DeleteBookmark{
 }
 
 div#DeleteBookmark:hover{
-    opacity:0.7;
-    text-decoration: underline;
+    opacity:0.5;
 }
 
 div#InitializeSettings{
@@ -370,8 +373,7 @@ div#InitializeSettings{
 }
 
 div#InitializeSettings:hover{
-    opacity:0.7;
-    text-decoration: underline;
+    opacity:0.5;
 }
 
 div#Confirm{
@@ -431,7 +433,36 @@ span.YesNo:hover{
     リンクページ
 ************************************/
 
+div#Links {
+    display: none;
+    position: absolute;
+    width: 1024px;
+    height: 633px;
+    background-image: url(images/mask.png);
+    text-shadow: 0px 0px 5px #fff;
+}
 
+div.Banner {
+    margin-left: 120px;
+    margin-right: 120px;
+    font-family: "Noto Sans CJK JP", "源ノ角ゴシック","游ゴシック","游ゴシック体", "メイリオ", "HGPｺﾞｼｯｸM", sans-serif;
+    margin-top:70px;
+}
+
+span.LinkText {
+    position: absolute;
+    color: #fff;
+    font-size: 24px;
+    margin-left: 50px;
+}
+
+img.BannerImage {
+    border: solid 1px #888;
+}
+
+img.BannerImage:hover {
+    opacity: 0.5;
+}
 
 /************************************
     本文ページ
@@ -444,6 +475,7 @@ div#TextBackground{
     text-align: center;
     position: relative;
     visibility: hidden;
+    border: solid 1px #888;
 }
 
 
@@ -456,7 +488,7 @@ div#SectionCover{
 }
 
 img#SecCoverImg{
-     width:784px;
+     width:100%;
 }
 
 img#SecCoverLogo{
@@ -493,17 +525,6 @@ div.Navigator{
     font-size:20px;
 }
 
-div.Navigator a:link{
-    color:#333;
-}
-
-div.Navigator a:visited{
-    color:#333;
-}
-
-div.Navigator a:hover{
-    color:#333;
-}
 
 span.NaviBar{
     margin-right: 50px;
